==================
Unreleased Changes
==================

This file collects *unreleased* changes only.

For release notes, see:

  https://crate.io/docs/reference/en/latest/release_notes/index.html

For developers: changes should be recorded here (using RST syntax) as you are
developing CrateDB. When a new release is being cut, changes will be moved to
the appropriate section of the docs.

Breaking Changes
================

Changes
=======

- Improved the performance of password authentication for connections that are
  re-used.

Fixes
=====

- Fixed an issue that caused a ``ClassCastException`` to be thrown when querying
  the ``sys.health`` table on a cluster that has ``blob`` tables.

- Fixed support for views with aliased literals in select list / groupBy /
  orderBy.