@@ -29,3 +29,7 @@ Fixes
 
 - Fixed support for views with aliased literals in select list / groupBy /
   orderBy.
+
+- Fixed a bug affecting the Postgres Wire Protocol's Simple Query mode and
+  queries which contained strings with escaped single quotes and semicolons,
+  e.g. `'Hello ''Joe'';'`.
